--- a/TENCAR/Info.plist
+++ b/TENCAR/Info.plist
@@ -19,13 +19,16 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>8</string>
+	<string>9</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Panton.otf</string>
-		<string>Panton-SemiBold.otf</string>
+		<string>ALSSchlangesans-Black.otf</string>
+		<string>ALSSchlangesans-Bold.otf</string>
+		<string>ALSSchlangesans-Light.otf</string>
+		<string>ALSSchlangesans-Thin.otf</string>
+		<string>ALSSchlangesans.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -36,7 +39,9 @@
 		<string>armv7</string>
 	</array>
 	<key>UIRequiresFullScreen</key>
-	<false/>
+	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
